spade-tests/src/snapshots/spade_tests__ast_lowering__match_expressions_open_new_scopes.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test(x: int<32>) -> int<32> {
    let _: int<32> = match x {
        a => 0
    };

    a
}


error: Use of undeclared name a
  ┌─ testinput:6:5
  │
6 │     a
  │     ^ Undeclared name


